--- a/Firmware/M8P/Trident_M8P_v1.0_config.cfg
+++ b/Firmware/M8P/Trident_M8P_v1.0_config.cfg
@@ -1,14 +1,16 @@
-# This file contains common pin mappings for the BIGTREETECH Manta M8P
+# This file contains common pin mappings for the BIGTREETECH Manta M8P V1.0
 # To use this config, the firmware should be compiled for the
 # STM32G0B1 with a "8KiB bootloader" and USB communication.
 
+# This config is currently only correct for V1.0 boards
+#
 # See docs/Config_Reference.md for a description of parameters.
 
 [mcu]
 ##	[X in MOTOR1] - B Motor
 ##	[Y in MOTOR2] - A Motor
 ##	[E in MOTOR8] - Extruder
-##	Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
+##	Obtain definition by "ls /dev/serial/by-id/*" then unplug to verify
 ##--------------------------------------------------------------------
 serial: /dev/serial/by-id/YOU_DIDNT_CHANGE_ME_YET
 #restart_method: command
